<?xml version="1.0"?>
<package format="3">
    <name>std_capabilities</name>
    <version>0.0.1</version>
    <description>
        This package provides a list of standard ROS capabilities such as nav2 and moveit2
    </description>

    <maintainer email="michael.pritchard@canberra.edu.au">Michael Pritchard</maintainer>
    <maintainer email="mppritchard3@hotmail.com">mik-p</maintainer>

    <author email="michael.pritchard@canberra.edu.au">Michael Pritchard</author>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>capabilities2_server</exec_depend>

    <!-- export standard capabilities -->
    <export>
        <!-- empty test interface -->
        <capability_interface>
            interfaces/empty.yaml
        </capability_interface>
        <!-- the nav2 interface -->
        <capability_interface>
            interfaces/nav2.yaml
        </capability_interface>
        <!-- the moveit2 interface -->
        <capability_interface>
            interfaces/moveit2.yaml
        </capability_interface>

        <!-- semantic interfaces -->
        <!-- not empty -->
        <semantic_capability_interface>
            semantic_interfaces/not_empty.yaml
        </semantic_capability_interface>

        <!-- providers -->
        <!-- empty test provider -->
        <capability_provider>
            providers/empty.yaml
        </capability_provider>
        <!-- empty depend -->
        <capability_provider>
            providers/empty_depend.yaml
        </capability_provider>
    </export>
</package>
